--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -220,3 +220,9 @@ $effects: (
         hero: 4px,
     )
 );
+$z-indexes: (
+    under-page: 0,
+    page: 1,
+    over-page: 2,
+    overlay: 3,
+);
